Project: added design for this page and made adaptive design. Cases: changed href for some cases.

--- a/src/project.html
+++ b/src/project.html
@@ -17,86 +17,97 @@
     "pageCurrentName": "Центр хирургии катаракты",
     })
 
-    <section class="project container">
+    <p class="page-title container">Центр хирургии катаракты</p>
 
-        <p class="page-title">Центр хирургии катаракты</p>
+    <section class="project">
+        <div class="project-cont container">
 
-        <div class="project-content">
-            <img class="project-content-logo" src="img/cases/image7.png" alt="image7"/>
-            <p class="project-content-text">Сайт разработан в дополнение к основному сайту клиники для выделения такого важного направления как “Хирургическое лечение катаракты”.</p>
+            <div class="project-content">
 
-            <div class="project-content-adaptation">
-                <div class="content-adaptation-block">
-                    <p class="content-adaptation-title">Адаптация</p>
-                    <p class="content-adaptation-text">Дизайн и верстка проекта адаптивные и правильно выглядит на любом устройстве</p>
+                <img class="project-logo" src="img/cases/logo5.png" alt="logo5"/>
+                <p class="project-content-text">Сайт разработан в дополнение к основному сайту клиники для выделения такого важного направления как “Хирургическое лечение катаракты”.</p>
+
+                <div class="project-content-adaptation">
+                    <div class="content-adaptation-block">
+                        <p class="content-adaptation-title">Адаптация</p>
+                        <p class="content-adaptation-text">Дизайн и верстка проекта адаптивные и правильно выглядит на любом устройстве</p>
+                    </div>
+                    <img class="content-adaptation-img" src="img/surgery/monitor.png" alt="monitor"/>
                 </div>
-                <img class="content-adaptation-img" src="img/surgery/monitor.png" alt="monitor"/>
-            </div>
 
-
-            <hr/>
-
-            <div class="project-content-result">
-                <p class="content-result-title">Результат</p>
-                <div class="content-result-block">
-                    <div class="result-block-item">
-                        <p class="result-block-title">40 часов</p>
-                        <p class="result-block-text">Разработка дизайна</p>
-                    </div>
-                    <div class="result-block-item">
-                        <p class="result-block-title">38 часов</p>
-                        <p class="result-block-text">Верстка проекта</p>
-                    </div>
-                    <div class="result-block-item">
-                        <p class="result-block-title">75 часов</p>
-                        <p class="result-block-text">Программирование</p>
+                <div class="project-content-result">
+                    <p class="content-result-title">Результат</p>
+                    <div class="content-result-block">
+                        <div class="result-block-item">
+                            <p class="result-block-title">40 часов</p>
+                            <p class="result-block-text">Разработка дизайна</p>
+                        </div>
+                        <div class="result-block-item">
+                            <p class="result-block-title">38 часов</p>
+                            <p class="result-block-text">Верстка проекта</p>
+                        </div>
+                        <div class="result-block-item">
+                            <p class="result-block-title">75 часов</p>
+                            <p class="result-block-text">Программирование</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <aside class="project-info">
-            <div class="project-info-item">
-                <p class="info-item-title">Ссылка:</p>
-                <span class="info-item-text">https://cataracta.center/</span>
-            </div>
-            <div class="project-info-item">
-                <p class="info-item-title">Год:</p>
-                <span class="info-item-text">2022</span>
-            </div>
-            <div class="project-info-item">
-                <p class="info-item-title">Затрачено рабочих часов:</p>
-                <span class="info-item-text">123</span>
-            </div>
-            <div class="project-info-item">
-                <p class="info-item-title">Время на разработку:</p>
-                <span class="info-item-text">45 дней</span>
-            </div>
-        </aside>
+            <div class="project-aside">
+                <aside class="project-info">
+                    <div class="project-info-item">
+                        <p class="info-item-title">Ссылка:</p>
+                        <a class="info-item-text">https://cataracta.center/</a>
+                    </div>
+                    <div class="project-info-item">
+                        <p class="info-item-title">Год:</p>
+                        <span class="info-item-text">2022</span>
+                    </div>
+                    <div class="project-info-item">
+                        <p class="info-item-title">Затрачено рабочих часов:</p>
+                        <span class="info-item-text">123</span>
+                    </div>
+                    <div class="project-info-item">
+                        <p class="info-item-title">Время на разработку:</p>
+                        <span class="info-item-text">45 дней</span>
+                    </div>
+                </aside>
 
-        <aside class="connection-block">
-            <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
-            <p class="connection-block-title">Мы на связи</p>
-            <p class="connection-block-state">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
-            <button class="connection-block-btn">Задать вопрос
-                <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
-            </button>
-            <div class="connection-block-icons">
-                <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
-                <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
-                <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
+                <aside class="connection-block">
+                    <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
+                    <p class="connection-block-title">Мы на связи</p>
+                    <p class="connection-block-state">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
+                    <button class="connection-block-btn">Задать вопрос<span class="connection-block-btnVector">  &gt;</span></button>
+                    <div class="connection-block-icons">
+                        <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
+                        <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
+                        <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
+                    </div>
+                </aside>
             </div>
-        </aside>
 
-        <img class="project-img" src="img/surgery/cataract.png" alt="cataract"/>
-
-        <div class="project-others">
-            <img class="project-others-img" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-            <img class="project-others-img project-others-img2" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-            <span class="project-others-text"><a href="#">Смотреть все</a></span>
         </div>
 
     </section>
+
+    <div class="project-screen container">
+        <img class="project-img" src="img/surgery/cataract.png" alt="cataract"/>
+
+        <div class="page-cases-swiper">
+            <div class="swiper-arrows">
+                <div class="swiper-arrow swiper-arrow-prev">
+                    <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+                </div>
+                <div class="swiper-arrow swiper-arrow-next">
+                    <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+                </div>
+            </div>
+            <span class="page-look"><a class="page-look-href" href="cases.html">Смотреть все</a></span>
+        </div>
+    </div>
+
+
 </main>
 
 @@include('html/all-pages/footer.html',{})
