About: made some blocks this page with adaptive design. Mobile: added sime animation on first block

--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
 
             <div class="about-block about-block1">
                 <div class="about-block-cont container">
-                    <div class="about-cont">
+                    <div class="about-cont about-cont1">
                         <p class="about-tittle">О компании</p>
                         <div class="about-text-block">
                             <svg class="svg-attention" width="20" height="20">
@@ -28,27 +28,28 @@
             </div>
 
             <div class="about-block about-block2">
-                <div class="about-block-cont container">
-                    <div class="about-cont">
-                        <p class="about-tittle">Совершенство и развитие</p>
-                        <div class="about-text-block">
-                            <svg class="svg-attention" width="20" height="20">
-                                <use href="#attention"/>
-                            </svg>
-                            <p class="about-bluText">Viatekmedia - идет в ногу со временем</p>
-                        </div>
-                        <p class="about-text">Мы повышаем уровень своего профессионализма и знаний для того, чтобы держать вас в курсе новостей и событий индустрии автоматизации бизнеса. Мы совершенствуем будущее, которое вы создаете.</p>
+                <img class="about-block2-imgHand" src="img/about/about-hand.png" alt="hand">
+
+                <div class="about-cont about-cont2">
+                    <p class="about-tittle">Совершенство и развитие</p>
+                    <div class="about-text-block">
+                        <svg class="svg-attention" width="20" height="20">
+                            <use href="#attention"/>
+                        </svg>
+                        <p class="about-bluText">Viatekmedia - идет в ногу со временем</p>
                     </div>
                 </div>
-                <div class="about-block2-img">
-<!--                    <img src="img/about/about-hand.png" alt="hand">-->
-<!--                    <img src="img/about/about-plant.png" alt="plant">-->
-                </div>
+
+                <p class="about-text about-text2">Мы повышаем уровень своего профессионализма и знаний для того, чтобы держать вас в курсе новостей и событий индустрии автоматизации бизнеса. Мы совершенствуем будущее, которое вы создаете.</p>
+
+                <img class="about-block2-imgPlant" src="img/about/about-plant.png" alt="plant">
             </div>
 
             <div class="about-block about-block3">
-                <div class="about-block-cont container">
-                    <div class="about-cont">
+                <img src="img/about/about-men.png" alt="men">
+
+                <div class="about-block-cont">
+                    <div class="about-cont about-cont3">
                         <p class="about-tittle">Миссия компании</p>
                         <div class="about-text-block">
                             <svg class="svg-attention" width="20" height="20">
@@ -59,12 +60,12 @@
                         <p class="about-text">Мы работаем чтобы помочь вашему бизнесу стать более успешными, автоматизируя процессы перераспределить высвободившийся временной ресурс для создания новых и нужных благ человеку и обществу.</p>
                     </div>
                 </div>
-<!--                <img src="img/about/about-grass.png" alt="grass">-->
-<!--                <img src="img/about/about-men.png" alt="men">-->
+
+                <img src="img/about/about-grass.png" alt="grass">
             </div>
 
             <div class="about-block about-block4">
-                <div class="about-block-cont container">
+                <div class="about-block-cont about-block-cont4">
                     <div class="about-cont">
                         <p class="about-tittle">Индивидуальность</p>
                         <div class="about-text-block">
@@ -76,8 +77,9 @@
                         <p class="about-text">Ваша индивидуальность определяет направление, в котором мы движемся. Именно вы задаете темп и вектор вашего развития, а мы делаем наши решения соответствующимиим.</p>
                     </div>
                 </div>
+                <img class="block4-img-mans" src="img/about/about-mens.png" alt="mens">
 <!--                <div class="about-block4-img">-->
-<!--                    <img class="block4-img-mans" src="img/about/about-mens.png" alt="mens">-->
+<!--                    -->
 <!--                    <img class="block4-img-manDance" src="img/about/about-men-dance.png" alt="men-dance">-->
 <!--                </div>-->
             </div>
