--- a/src/mobile.html
+++ b/src/mobile.html
@@ -37,7 +37,7 @@
                 <div class="content-item-cont container">
                     <div class="content-item-block">
                         <img class="item-block-num" src="img/mobile/number1.png" alt="number1"/>
-                        <div class="item-block-cont">
+                        <div class="item-block-cont item-block-contLeft">
                             <p class="item-block-title">Рождение идеи</p>
                             <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>
                         </div>
