Mobile: made design this page with some animations and made adaptive design. Need shell add imgs. Dropdown: added href on ЗРÑазработка

--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -8,7 +8,9 @@
 <section class="dropdown">
     <div class="dropdown-menu">
         <ul class="dropdown-submenu">
+            <a href="/services.html">
             <p class="dropdown-submenu-title">Разработка</p>
+            </a>
             <a href="/development.html">
                 <li class="dropdown-submenu-item">Создание сайтов</li>
             </a>
