--- a/src/mobile.html
+++ b/src/mobile.html
@@ -60,16 +60,16 @@
             <div class="content-item">
                 <div class="content-item-cont container">
 
-                    <img class="item-block-num" src="img/mobile/number1.png" alt="number1"/>
+                    <img class="item-block-num item-block-num-left" src="img/mobile/number1.png" alt="number1"/>
 
-<!--                    <div class="item-block-cont item-block-contLeft">-->
-<!--                        <p class="item-block-title">Рождение идеи</p>-->
-<!--                        <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>-->
-<!--                    </div>-->
+                    <div class="item-block-cont item-block-contLeft">
+                        <p class="item-block-title">Рождение идеи</p>
+                        <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>
+                    </div>
 
 <!--                    <img class="content-item-img" src="img/mobile/games1.png" alt="games1"/>-->
 
-                    <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-imgBgd content-item-imgBgd-right" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                 </div>
             </div>
@@ -78,32 +78,35 @@
                 <div class="content-item-cont container">
 
 <!--                    <img class="content-item-img" src="img/mobile/games2.png" alt="games2"/>-->
-                    <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-imgBgd content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
-                    <img class="item-block-num" src="img/mobile/number2.png" alt="number2"/>
+                  <div class="item-block-num-blockright">
+                    <img class="item-block-num item-block-num-right" src="img/mobile/number2.png" alt="number2"/>
+                  </div>
 
-<!--                    <div class="item-block-cont item-block-cont2">-->
-<!--                        <p class="item-block-title">Выбор жанра игры</p>-->
-<!--                        <p class="item-block-text">Обычно выделяют 3 основных направления:</p>-->
-<!--                        <div class="page-list-item">-->
-<!--                            <svg class="page-list-img" >-->
-<!--                                <use href="#resize-horizontal-roundBlack"/>-->
-<!--                            </svg>-->
-<!--                            <span class="page-list-text">Hyper casual</span>-->
-<!--                        </div>-->
-<!--                        <div class="page-list-item">-->
-<!--                            <svg class="page-list-img" >-->
-<!--                                <use href="#resize-horizontal-roundBlack"/>-->
-<!--                            </svg>-->
-<!--                            <span class="page-list-text">Midcore</span>-->
-<!--                        </div>-->
-<!--                        <div class="page-list-item">-->
-<!--                            <svg class="page-list-img" >-->
-<!--                                <use href="#resize-horizontal-roundBlack"/>-->
-<!--                            </svg>-->
-<!--                            <span class="page-list-text">Hardcore</span>-->
-<!--                        </div>-->
-<!--                    </div>-->
+
+                    <div class="item-block-cont item-block-contRight">
+                        <p class="item-block-title">Выбор жанра игры</p>
+                        <p class="item-block-text">Обычно выделяют 3 основных направления:</p>
+                        <div class="page-list-item">
+                          <svg class="page-list-img" >
+                            <use href="#resize-horizontal-roundBlack"/>
+                          </svg>
+                            <span class="page-list-text">Hyper casual</span>
+                        </div>
+                        <div class="page-list-item">
+                          <svg class="page-list-img" >
+                            <use href="#resize-horizontal-roundBlack"/>
+                          </svg>
+                            <span class="page-list-text">Midcore</span>
+                        </div>
+                        <div class="page-list-item">
+                            <svg class="page-list-img" >
+                                <use href="#resize-horizontal-roundBlack"/>
+                            </svg>
+                            <span class="page-list-text">Hardcore</span>
+                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -112,16 +115,16 @@
             <div class="content-item">
                 <div class="content-item-cont container">
 
-                    <img class="item-block-num" src="img/mobile/number3.png" alt="number3"/>
+                    <img class="item-block-num item-block-num-left" src="img/mobile/number3.png" alt="number3"/>
 
-<!--                    <div class="item-block-cont">-->
-<!--                        <p class="item-block-title">Среда разработки</p>-->
-<!--                        <p class="item-block-text">Наша команда работает на самой крупной платформе - Unity. Платформа с большим выбором инструментов</p>-->
-<!--                    </div>-->
+                    <div class="item-block-cont item-block-contLeft">
+                        <p class="item-block-title">Среда разработки</p>
+                        <p class="item-block-text">Наша команда работает на самой крупной платформе - Unity. Платформа с большим выбором инструментов</p>
+                    </div>
 
 <!--                    <img class="content-item-img" src="img/mobile/games3-1.png" alt="games3-1"/>-->
 <!--                    <img class="content-item-back" src="img/mobile/games3-2.png" alt="games3-2"/>-->
-                    <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-imgBgd content-item-imgBgd-right" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                 </div>
             </div>
@@ -132,14 +135,17 @@
                 <div class="content-item-cont container">
 
 <!--                    <img class="content-item-img" src="img/mobile/games4.png" alt="games4"/>-->
-                    <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-imgBgd content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
-                    <img class="item-block-num" src="img/mobile/number4.png" alt="number4"/>
+                  <div class="item-block-num-blockright">
+                    <img class="item-block-num item-block-num-right" src="img/mobile/number4.png" alt="number4"/>
+                  </div>
 
-<!--                    <div class="content-item-block">-->
-<!--                        <p class="item-block-title">Проработка геймплея</p>-->
-<!--                        <p class="item-block-text">Это своего рода способы удержания в игре - дополнительные функции, бонусы и секретные предметы</p>-->
-<!--                    </div>-->
+
+                    <div class="item-block-cont item-block-contRight">
+                        <p class="item-block-title">Проработка геймплея</p>
+                        <p class="item-block-text">Это своего рода способы удержания в игре - дополнительные функции, бонусы и секретные предметы</p>
+                    </div>
 
                 </div>
             </div>
@@ -147,13 +153,14 @@
             <div class="content-item">
                 <div class="content-item-cont container">
 
-                    <img class="item-block-num" src="img/mobile/number5.png" alt="number5"/>
-<!--                    <div class="item-block-cont">-->
-<!--                        <p class="item-block-title">Выбор платформы</p>-->
-<!--                        <p class="item-block-text">Android, iOS, кроссплатформенная</p>-->
-<!--                    </div>-->
+                    <img class="item-block-num item-block-num-left" src="img/mobile/number5.png" alt="number5"/>
+
+                    <div class="item-block-cont item-block-contLeft">
+                        <p class="item-block-title">Выбор платформы</p>
+                        <p class="item-block-text">Android, iOS, кроссплатформенная</p>
+                    </div>
 <!--                    <img class="content-item-img" src="img/mobile/games5.png" alt="games5"/>-->
-                    <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-imgBgd content-item-imgBgd-right" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                 </div>
             </div>
@@ -162,12 +169,18 @@
                 <div class="content-item-cont container">
 
 <!--                    <img class="content-item-img" src="img/mobile/games6.png" alt="games6"/>-->
-                    <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
-                    <img class="item-block-num" src="img/mobile/number6.png" alt="number6"/>
-<!--                    <div class="content-item-block">-->
-<!--                        <p class="item-block-title">Геймдизайн</p>-->
-<!--                        <p class="item-block-text">Самый длительный, ведь именно сейчас прорабатывается история, отрисовываются персонажи и весь пользовательский путь</p>-->
-<!--                    </div>-->
+                    <img class="content-item-imgBgd content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+
+
+                  <div class="item-block-num-blockright">
+                    <img class="item-block-num item-block-num-right" src="img/mobile/number6.png" alt="number6"/>
+                  </div>
+
+
+                    <div class="item-block-cont item-block-contRight">
+                        <p class="item-block-title">Геймдизайн</p>
+                        <p class="item-block-text">Самый длительный, ведь именно сейчас прорабатывается история, отрисовываются персонажи и весь пользовательский путь</p>
+                    </div>
 
                 </div>
             </div>
@@ -175,13 +188,13 @@
             <div class="content-item">
                 <div class="content-item-cont container">
 
-                  <img class="item-block-num" src="img/mobile/number7.png" alt="number7"/>
-<!--                  <div class="item-block-cont">-->
-<!--                    <p class="item-block-title">Тестирование</p>-->
-<!--                    <p class="item-block-text">Качественное и современное тестирование - это верный путь к запуску действительно качественного продукта</p>-->
-<!--                  </div>-->
+                  <img class="item-block-num item-block-num-left" src="img/mobile/number7.png" alt="number7"/>
+                  <div class="item-block-cont item-block-contLeft">
+                    <p class="item-block-title">Тестирование</p>
+                    <p class="item-block-text">Качественное и современное тестирование - это верный путь к запуску действительно качественного продукта</p>
+                  </div>
 <!--                  <img class="content-item-img" src="img/mobile/games7.png" alt="games7"/>-->
-                  <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                  <img class="content-item-imgBgd content-item-imgBgd-right" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                 </div>
             </div>
