--- a/src/mobile.html
+++ b/src/mobile.html
@@ -36,27 +36,6 @@
 
 
 
-
-<!--            <div class="content-item">-->
-<!--                <div class="content-item-cont container">-->
-<!--                    <div class="content-item-block">-->
-<!--                        <img class="item-block-num" src="img/mobile/number1.png" alt="number1"/>-->
-<!--                        <div class="item-block-cont item-block-contLeft">-->
-<!--                            <p class="item-block-title">Рождение идеи</p>-->
-<!--                            <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    <div class="content-item-blockImg">-->
-<!--                        <img class="content-item-img" src="img/mobile/games1.png" alt="games1"/>-->
-<!--                        <img class="content-item-imgBgd" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
-
-
-
             <div class="content-item">
                 <div class="content-item-cont container">
 
@@ -67,9 +46,9 @@
                         <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>
                     </div>
 
-<!--                    <img class="content-item-img" src="img/mobile/games1.png" alt="games1"/>-->
+                    <img class="content-item-img content-item-img-games1" src="img/mobile/games1.png" alt="games1"/>
 
-                    <img class="content-item-imgBgd content-item-imgBgd-right" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-imgBgd content-item-imgBgd1" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                 </div>
             </div>
@@ -77,15 +56,15 @@
             <div class="content-item">
                 <div class="content-item-cont container">
 
-<!--                    <img class="content-item-img" src="img/mobile/games2.png" alt="games2"/>-->
-                    <img class="content-item-imgBgd content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-img content-item-img-games2" src="img/mobile/games2.png" alt="games2"/>
+                    <img class="content-item-imgBgd content-item-imgBgd2" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
-                  <div class="item-block-num-blockright">
-                    <img class="item-block-num item-block-num-right" src="img/mobile/number2.png" alt="number2"/>
+                  <div class="item-block-num-blockRight">
+                    <img class="item-block-num item-block-num2" src="img/mobile/number2.png" alt="number2"/>
                   </div>
 
 
-                    <div class="item-block-cont item-block-contRight">
+                    <div class="item-block-cont item-block-contRight item-block-cont2">
                         <p class="item-block-title">Выбор жанра игры</p>
                         <p class="item-block-text">Обычно выделяют 3 основных направления:</p>
                         <div class="page-list-item">
@@ -122,9 +101,9 @@
                         <p class="item-block-text">Наша команда работает на самой крупной платформе - Unity. Платформа с большим выбором инструментов</p>
                     </div>
 
-<!--                    <img class="content-item-img" src="img/mobile/games3-1.png" alt="games3-1"/>-->
-<!--                    <img class="content-item-back" src="img/mobile/games3-2.png" alt="games3-2"/>-->
-                    <img class="content-item-imgBgd content-item-imgBgd-right" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-img-games3" src="img/mobile/games3-1.png" alt="games3-1"/>
+                    <img class="content-item-img content-item-img-games32" src="img/mobile/games3-2.png" alt="games3-2"/>
+                    <img class="content-item-imgBgd content-item-imgBgd3" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                 </div>
             </div>
@@ -134,15 +113,15 @@
             <div class="content-item">
                 <div class="content-item-cont container">
 
-<!--                    <img class="content-item-img" src="img/mobile/games4.png" alt="games4"/>-->
-                    <img class="content-item-imgBgd content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-img content-item-img-games4" src="img/mobile/games4.png" alt="games4"/>
+                    <img class="content-item-imgBgd content-item-imgBgd4 content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                   <div class="item-block-num-blockright">
-                    <img class="item-block-num item-block-num-right" src="img/mobile/number4.png" alt="number4"/>
+                    <img class="item-block-num item-block-num4 item-block-num-right" src="img/mobile/number4.png" alt="number4"/>
                   </div>
 
 
-                    <div class="item-block-cont item-block-contRight">
+                    <div class="item-block-cont item-block-cont4 item-block-contRight">
                         <p class="item-block-title">Проработка геймплея</p>
                         <p class="item-block-text">Это своего рода способы удержания в игре - дополнительные функции, бонусы и секретные предметы</p>
                     </div>
@@ -159,8 +138,8 @@
                         <p class="item-block-title">Выбор платформы</p>
                         <p class="item-block-text">Android, iOS, кроссплатформенная</p>
                     </div>
-<!--                    <img class="content-item-img" src="img/mobile/games5.png" alt="games5"/>-->
-                    <img class="content-item-imgBgd content-item-imgBgd-right" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-img content-item-img-games5" src="img/mobile/games5.png" alt="games5"/>
+                    <img class="content-item-imgBgd content-item-imgBgd5" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                 </div>
             </div>
@@ -168,16 +147,16 @@
             <div class="content-item">
                 <div class="content-item-cont container">
 
-<!--                    <img class="content-item-img" src="img/mobile/games6.png" alt="games6"/>-->
-                    <img class="content-item-imgBgd content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                    <img class="content-item-img content-item-img-games6" src="img/mobile/games6.png" alt="games6"/>
+                    <img class="content-item-imgBgd content-item-imgBgd6" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
 
                   <div class="item-block-num-blockright">
-                    <img class="item-block-num item-block-num-right" src="img/mobile/number6.png" alt="number6"/>
+                    <img class="item-block-num item-block-num6 item-block-num-right" src="img/mobile/number6.png" alt="number6"/>
                   </div>
 
 
-                    <div class="item-block-cont item-block-contRight">
+                    <div class="item-block-cont item-block-cont6 item-block-contRight">
                         <p class="item-block-title">Геймдизайн</p>
                         <p class="item-block-text">Самый длительный, ведь именно сейчас прорабатывается история, отрисовываются персонажи и весь пользовательский путь</p>
                     </div>
@@ -193,8 +172,8 @@
                     <p class="item-block-title">Тестирование</p>
                     <p class="item-block-text">Качественное и современное тестирование - это верный путь к запуску действительно качественного продукта</p>
                   </div>
-<!--                  <img class="content-item-img" src="img/mobile/games7.png" alt="games7"/>-->
-                  <img class="content-item-imgBgd content-item-imgBgd-right" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
+                  <img class="content-item-img content-item-img-games7" src="img/mobile/games7.png" alt="games7"/>
+                  <img class="content-item-imgBgd content-item-imgBgd7" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
                 </div>
             </div>
