added hrefs in page Services. fdded hrefA in allApages wil pÐgosbreadcrumbs УчлÑc иbs луmbs ÑUslugi

--- a/src/1C-integration.html
+++ b/src/1C-integration.html
@@ -13,7 +13,7 @@
     <section class="integration">
 
         @@include('html/all-pages/breadcrumps.html',{
-        "pageSectionLink": "",
+        "pageSectionLink": "services.html",
         "pageSectionName": "Услуги",
         "pageCurrentName": "Интеграция с 1С",
         })
