--- a/src/integrations.html
+++ b/src/integrations.html
@@ -13,7 +13,7 @@
     <section class="integrations">
 
         @@include('html/all-pages/breadcrumps.html',{
-        "pageSectionLink": "",
+        "pageSectionLink": "services.html",
         "pageSectionName": "Услуги",
         "pageCurrentName": "Интеграции",
         })
