--- a/src/mobile.html
+++ b/src/mobile.html
@@ -11,7 +11,7 @@
     <section class="mobile">
 
         @@include('html/all-pages/breadcrumps.html',{
-        "pageSectionLink": "",
+        "pageSectionLink": "services.html",
         "pageSectionName": "Услуги",
         "pageCurrentName": "Разработка мобильных приложений и игр",
         })
