--- a/src/services.html
+++ b/src/services.html
@@ -34,19 +34,45 @@
         </aside>
         <div class="services-inner">
             <div class="services-tabs">
-                <span class="services-tabs-item">Создание сайтов</span>
-                <span class="services-tabs-item">Разработка интернет-магазина</span>
-                <span class="services-tabs-item">Интеграция с 1С</span>
-                <span class="services-tabs-item">Поддержка сайтов</span>
-                <span class="services-tabs-item">Битрикс24.CRM</span>
-                <span class="services-tabs-item">Разработка мобильных игр и приложений</span>
-                <span class="services-tabs-item">amoCRM</span>
-                <span class="services-tabs-item">Поддержка CRM</span>
-                <span class="services-tabs-item">Анализ и оптимизация бизнес-процессов</span>
-                <span class="services-tabs-item">Автоматизация бизнес-процессов</span>
-                <span class="services-tabs-item">Техническое сопровождение CRM</span>
-                <span class="services-tabs-item">Техническое сопровождение сайтов</span>
-                <span class="services-tabs-item">Интеграции</span>
+                <a class="services-tabs-item" href="development.html">
+                    <span>Создание сайтов</span>
+                </a>
+                <a class="services-tabs-item" href="internet-shops.html">
+                    <span>Разработка интернет-магазина</span>
+                </a>
+                <a class="services-tabs-item" href="1C-integration.html">
+                    <span>Интеграция с 1С</span>
+                </a>
+                <a class="services-tabs-item" href="support.html">
+                    <span>Поддержка сайтов</span>
+                </a>
+                <a class="services-tabs-item" href="crm-implement.html">
+                    <span>Битрикс24.CRM</span>
+                </a>
+                <a class="services-tabs-item" href="mobile.html">
+                    <span>Разработка мобильных игр и приложений</span>
+                </a>
+                <a class="services-tabs-item" href="amocrm.html">
+                    <span>amoCRM</span>
+                </a>
+                <a class="services-tabs-item" href="crm-support.html">
+                    <span>Поддержка CRM</span>
+                </a>
+                <a class="services-tabs-item" href="analysis.html">
+                    <span>Анализ и оптимизация бизнес-процессов</span>
+                </a>
+                <a class="services-tabs-item" href="automation.html">
+                    <span>Автоматизация бизнес-процессов</span>
+                </a>
+                <a class="services-tabs-item" href="maintenance.html">
+                    <span>Техническое сопровождение CRM</span>
+                </a>
+                <a class="services-tabs-item" href="support.html">
+                    <span>Техническое сопровождение сайтов</span>
+                </a>
+                <a class="services-tabs-item" href="integrations.html">
+                    <span>Интеграции</span>
+                </a>
             </div>
             <div class="services-slider-wrapper">
                 <div class="services-slider swiper ">
