--- a/src/automation.html
+++ b/src/automation.html
@@ -13,7 +13,7 @@
     <section class="automation">
 
         @@include('html/all-pages/breadcrumps.html',{
-        "pageSectionLink": "",
+        "pageSectionLink": "services.html",
         "pageSectionName": "Услуги",
         "pageCurrentName": "Автоматизация бизнес-процессов",
         })
