--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -13,7 +13,7 @@
     <section class="internet">
 
       @@include('html/all-pages/breadcrumps.html',{
-      "pageSectionLink": "",
+      "pageSectionLink": "services.html",
       "pageSectionName": "Услуги",
       "pageCurrentName": "Разработка интернет-магазинов",
       })
